# emacs-jieba-rs

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.org  flake.nix  manifest.json
.agents/skills/commit/: SKILL.md
.agents/skills/commit/references/: gnu-change-log-style.md
.agents/skills/nix-coding/: SKILL.md
.agents/skills/nix-coding/references/: nix-coding-style.md
.agents/skills/rust-coding/: SKILL.md
.agents/skills/rust-coding/references/: anti-clone-excessive.md  anti-collect-intermediate.md  anti-empty-catch.md  anti-expect-lazy.md  anti-format-hot-path.md  anti-index-over-iter.md  anti-lock-across-await.md  anti-over-abstraction.md  anti-panic-expected.md  anti-premature-optimize.md  anti-string-for-str.md  anti-stringly-typed.md  anti-type-erasure.md  anti-unwrap-abuse.md  anti-vec-for-slice.md  api-builder-must-use.md  api-builder-pattern.md  api-common-traits.md  api-default-impl.md  api-extension-trait.md  api-from-not-into.md  api-impl-asref.md  api-impl-fromiterator.md  api-impl-into.md  api-must-use.md  api-newtype-safety.md  api-non-exhaustive.md  api-operator-overload.md  api-parse-dont-validate.md  api-sealed-trait.md  api-serde-optional.md  api-typestate.md  async-async-fn-bounds.md  async-bounded-channel.md  async-broadcast-pubsub.md  (+230 more)
.github/workflows/: emacs-lisp-checks.yml  release.yml  rust-checks.yml
build-aux/: generate-autoloads.el  generate-pkg.el
build-aux/devshells/: default.nix
docs/: README.md
lisp/: jieba-rs.el
src/: lib.rs
tests/: chinese-text.org  jieba-rs-tests.el
tools/devshells/: default.nix
