[package]
authors = ["Bingshan Chang <chang@bingshan.org>"]
edition = "2024"
license = "GPL-3.0-or-later"
name = "emacs-jieba-rs"
rust-version = "1.88"
version = "0.1.0"

[dependencies]
emacs = "0.21"
jieba-rs = { version = "0.10", features = ["textrank", "tfidf"] }

[lib]
crate-type = ["cdylib"]
name = "jieba_rs_module"
